--- a/server_manager/Cargo.toml
+++ b/server_manager/Cargo.toml
@@ -23,6 +23,7 @@ tower-http = { version = "0.5", features = ["fs", "trace"] }
 bcrypt = "0.15"
 tower-sessions = "0.12"
 time = "0.3"
+rand = "0.10.0"
 
 [dev-dependencies]
 criterion = "0.5"
