--- a/server_manager/Cargo.toml
+++ b/server_manager/Cargo.toml
@@ -26,10 +26,14 @@ time = "0.3"
 rand = "0.10.0"
 
 [dev-dependencies]
-criterion = "0.5"
+criterion = { version = "0.5", features = ["async_tokio"] }
 
 [[bench]]
 name = "service_benchmark"
+harness = false
+
+[[bench]]
+name = "config_benchmark"
 harness = false
 
 [workspace]
