--- a/server_manager/Cargo.toml
+++ b/server_manager/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "server_manager"
-version = "1.0.7"
+version = "1.0.8"
 edition = "2021"
 
 [dependencies]
@@ -26,7 +26,7 @@ time = "0.3"
 rand = "0.10.0"
 
 [dev-dependencies]
-criterion = "0.5"
+criterion = { version = "0.5", features = ["async_tokio"] }
 
 [[bench]]
 name = "service_benchmark"
