--- a/server_manager/Cargo.toml
+++ b/server_manager/Cargo.toml
@@ -26,7 +26,7 @@ time = "0.3"
 rand = "0.10.0"
 
 [dev-dependencies]
-criterion = "0.5"
+criterion = { version = "0.5", features = ["async_tokio"] }
 
 [[bench]]
 name = "service_benchmark"
